--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+nix = { version = "0.27.1", features = ["process", "signal"] }
 ulid = "1.1.0"
